Composer.json syntax error fix

--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     "minimum-stability": "dev",
     "prefer-stable" : true,
     "require": {
-        "yiisoft/yii2": "*",
+        "yiisoft/yii2": "*"
     },
     "autoload": {
         "psr-4": {
             "caritor\\cms\\": ""
-        }
+        },
     }
 }
