--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,17 @@
             "homepage":"http://caritorsolutions.com"
         }
     ],
-    "require": {        
+    "minimum-stability": "dev",
+    "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": "*"
+        "yiisoft/yii2": ">=2.0.6",
+        "yiisoft/yii2-bootstrap": "*",
+        "yiisoft/yii2-swiftmailer": "*"
     },
-    "autoload": {
-        "psr-4": {
-            "caritor\\cms\\": ""
-        }
+    "require-dev": {
+        "yiisoft/yii2-codeception": "*",
+        "yiisoft/yii2-debug": "*",
+        "yiisoft/yii2-gii": "*",
+        "yiisoft/yii2-faker": "*"
     }
 }
