Composer.json updates

--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,10 @@
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-faker": "*"
+    },
+    "autoload": {
+        "psr-4": {
+            "caritor\\cms\\": ""
+        }
     }
 }
